<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qmul.nminoiu.tunein.MyPlaylists"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/myplaylistsLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="55dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">


        <RelativeLayout
            android:id="@+id/sharedWithMeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:visibility="gone">


            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Shared with me"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/listSharedWithMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/playlistsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="My playlists"
                android:textColor="#212121"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ListView
                android:id="@+id/playlistsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="35dp"
                android:choiceMode="singleChoice"
                android:clickable="true"
                android:visibility="visible"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

        </RelativeLayout>

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:elevation="1dp"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        app:elevation="1dp"
        app:fabSize="mini"
        app:srcCompat="@drawable/home5" />


    <LinearLayout
        android:id="@+id/createPlaylist"
        android:layout_width="246dp"
        android:layout_height="172dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:alpha="1"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="Create New Playlist"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Enter a name for this new playlist"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textNoSuggestions" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/create"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:text="Create"
                android:textColor="@color/link" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:text="Cancel"
                android:textColor="@color/link" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="164dp"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <Button
            android:id="@+id/dwnPlaylist"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/deletePlaylist"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="-9dp"
            android:text="Download Playlist"
            android:textAllCaps="false"
            android:textColor="@color/link"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sharePlaylist"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dwnPlaylist"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="-9dp"
            android:text="Share Playlist"
            android:textAllCaps="false"
            android:textColor="@color/link"
            android:textSize="18sp" />

        <Button
            android:id="@+id/deletePlaylist"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/close"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="-9dp"
            android:text="Delete Playlist"
            android:textAllCaps="false"
            android:textColor="@color/link"
            android:textSize="18sp" />

        <Button
            android:id="@+id/close"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/link"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/play_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:background="#333333"
        android:clickable="true"
        android:onClick="openPlayerPage"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/fab_margin"
            android:background="@mipmap/uparrow"
            android:foregroundGravity="left"
            android:visibility="visible" />

        <TextView
            android:id="@+id/track_title"
            android:freezesText="true"
            android:layout_width="150dp"
            android:layout_height="17dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="0.82"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="13sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/ic_media_pause"
            android:foregroundGravity="center_vertical"
            android:onClick="playPauseMusic"
            android:visibility="visible" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
