<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id="@+id/action_add"

        android:icon="@mipmap/addwhite"

        android:orderInCategory="100"

        android:title="add"

        app:showAsAction="always" />

</menu>